# onsem-with-contextualplanner-tests

./: .gitmodules  CMakeLists.txt  README.md  onsem-with-contextualplanner-tests-config.cmake  run_stt.sh
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt
tests/gtests/src/semanticcontroller/: test_loadchatbot.cpp
tests/gtests/src/semanticcontroller/operators/: operator_teach.cpp
tests/onsemtester/src/: loadchatbot.cpp
tests/onsemwithplannergtests/: CMakeLists.txt
tests/onsemwithplannergtests/src/: main.cpp  onsemwithplannergtests.hpp  test_loadchatbot.cpp
tests/onsemwithplannertester/: CMakeLists.txt  onsemwithplannertester-config.cmake
tests/onsemwithplannertester/include/onsem/optester/: api.hpp  loadchatbot.hpp
tests/onsemwithplannertester/src/: loadchatbot.cpp
voicebotgui/: CMakeLists.txt
voicebotgui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
